fixing css and overflow

--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -1,12 +1,13 @@
 .card_box {
   border: 1px solid black;
-  width: 380px;
+  min-width: 300px;
   height: 400px;
-  margin: 0 0.5rem 0 0.5rem;
+  margin: 2rem 2rem 2rem 2rem;
   text-align: center;
   border-radius: 50px;
-  background: rgba(221, 212, 212, 0.699);
+  background: rgba(221, 212, 212, 0.877);
   transition: all 0.3s ease-in-out;
+  overflow:hidden;
 }
 
 .card_box:hover {
@@ -14,7 +15,14 @@
 }
 
 .bowl_img_container {
+    width: 380px;
+    height:220px;
+    background:coral;
+    z-index:2;
 }
 
 .bowl_img_container img {
+
+    width:100%;
+    height:100%;
 }
