--- a/src/components/cardList.module.css
+++ b/src/components/cardList.module.css
@@ -1,9 +1,36 @@
-.card_container{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width:90%;   
-    height:1000px;
-    margin:7rem auto 1rem auto;
-    background:#01010a8a;
+.card_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 1000px;
+  margin: 7rem auto 1rem auto;
+  border-radius: 50px;
+  background: #011418cc;
+}
+
+.sub_card_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 90%;
+  height: 90%;
+  overflow-y: scroll;
+}
+
+/* width */
+.sub_card_container::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+.sub_card_container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.sub_card_container::-webkit-scrollbar-thumb {
+  background: rgb(33, 248, 202);
+  border-radius: 10px;
 }
