--- a/src/components/searchBox.module.css
+++ b/src/components/searchBox.module.css
@@ -10,5 +10,5 @@
     border: 1px solid #eee;
     outline: 1px solid #698ef3;
     border-radius: 20px;
-    width: 70%;
+    width: 40%;
 }
